# mineplace3d

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.txt
mp3d-client/: Cargo.toml
mp3d-client/src/: client.rs  clientplayer.rs  main.rs  other.rs
mp3d-client/src/abs/: app.rs  framebuffer.rs  mesh.rs  mod.rs  shader.rs  texture.rs
mp3d-client/src/assets/: font.json  splashes.txt
mp3d-client/src/assets/blocks/models/: brick_slab.json  brick_stairs.json  brick_vslab.json  bricks.json  cobblestone.json  cross.json  cube.all.json  cube.col.json  diamond.json  dirt.json  glass.json  glungus.json  glungus_slab.json  glungus_stairs.json  glungus_vslab.json  gold.json  granite.json  grass.json  leaves.json  log.json  short_grass.json  slab.bot.all.json  slab.bot.json  slab.top.all.json  slab.top.json  stone.json  stone_slab.json  stone_slab_bot.json  stone_slab_top.json  stone_stairs.json  stone_vslab.json
mp3d-client/src/assets/blocks/states/: air.json  brick_slab.json  brick_stairs.json  brick_vslab.json  bricks.json  cobblestone.json  diamond.json  dirt.json  glass.json  glungus.json  glungus_slab.json  glungus_stairs.json  glungus_vslab.json  gold.json  granite.json  grass.json  leaves.json  log.json  short_grass.json  stone.json  stone_slab.json  stone_stairs.json  stone_vslab.json
mp3d-client/src/client/: chunk.rs  emoji.rs  mod.rs  player.rs  world.rs
mp3d-client/src/render/: clouds.rs  dialog.rs  entities.rs  meshing.rs  mod.rs  particles.rs  profiler.rs
mp3d-client/src/render/shaders/: frag.glsl  vert.glsl
mp3d-client/src/render/ui/: font.rs  mod.rs  uirenderer.rs
mp3d-client/src/resource/: fontsettings.rs  mod.rs
mp3d-client/src/resource/block/: mod.rs  model.rs  raw_model.rs  state.rs  texture.rs
mp3d-client/src/scenes/: mod.rs  options.rs  packselection.rs  singleplayer.rs  titlescreen.rs  worldcreation.rs  worldselection.rs
mp3d-core/: Cargo.toml
mp3d-core/src/: lib.rs  physics.rs  protocol.rs  textcomponent.rs  uniquequeue.rs
mp3d-core/src/axis/: convert.rs  mod.rs
mp3d-core/src/block/: blockstate.rs  mod.rs  registration.rs  save_impls.rs
mp3d-core/src/block/behaviors/: and_then.rs  explode.rs  facing.rs  mod.rs  slab.rs  stairs.rs
mp3d-core/src/command/: mod.rs  parser.rs
mp3d-core/src/command/commands/: clear.rs  give.rs  help.rs  mod.rs  say.rs  seed.rs  setblock.rs  test.rs  time.rs  tp.rs  tps.rs
mp3d-core/src/datapack/: files.rs  mod.rs
mp3d-core/src/direction/: arith.rs  convert.rs  mod.rs
mp3d-core/src/entity/: mod.rs  player.rs
mp3d-core/src/item/: mod.rs  registration.rs  save_impls.rs
mp3d-core/src/registry/: mod.rs
mp3d-core/src/saving/: error.rs  io.rs  mod.rs
mp3d-core/src/server/: mod.rs  user.rs
mp3d-core/src/world/: chunk.rs  generator.rs  mod.rs
mp3d-core/src/world/generation/: generator.rs  mod.rs  structure.rs  v01.rs  v02.rs
src/: ui.rs  (+7 more)
(+100 files in other folders)
