[package]
name = "mineplace3d"
version = "0.2.1-build-3"
edition = "2024"

[dependencies]
gl = "0.14.0"
glam = "0.30.4"
glfw = "0.59.0"
image = "0.25.6"
indexmap = { version = "2.11.1", features = ["serde"] }
noise = "0.9.0"
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
