[package]
name = "mineplace3d"
version = "0.3.0-alpha"
edition = "2024"

[dependencies]
dirs = "6.0.0"
fastnoise-lite = "1.1.1"
fxhash = "0.2.1"
glam = "0.30.4"
glow = "0.16.0"
image = "0.25.6"
indexmap = { version = "2.11.1", features = ["serde"] }
rand = "0.9.1"
rayon = "1.10.0"
sdl2 = "0.38.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
