[package]
name = "mp3d-client"
version = "0.1.0-beta"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0.0"
fastnoise-lite = "1.1.1"
fern = "0.7.1"
fxhash = "0.2.1"
glam = "0.30.10"
glow = "0.16.0"
image = "0.25.9"
include_dir = "0.7.4"
log = "0.4.29"
mp3d-core = { path = "../mp3d-core" }
rand = "0.10.0"
rayon = "1.11.0"
sdl2 = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
