[package]
name = "mp3d-core"
version = "0.1.0-beta"
edition = "2024"
license = "MIT"

[dependencies]
bcrypt = "0.18.0"
fastnoise-lite = "1.1.1"
fxhash = "0.2.1"
glam = "0.30.10"
include_dir = "0.7.4"
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
